--- a/harpg-toolkit/package.json
+++ b/harpg-toolkit/package.json
@@ -1,17 +1,16 @@
 {
   "name": "harpg-toolkit",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--inspect' next",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.4.4",
+    "next": "^9.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "swr": "^0.2.3",
-    "uuid": "^8.3.0"
+    "swr": "^0.3.0"
   }
 }
