changed config files and packages

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
         "skipFiles": ["<node_internals>/**"],
         "port": 9229,
         "sourceMapPathOverrides": {
-            "webpack:///./*": "${workspaceRoot}/subfolder/*",
+            "webpack:///./*": "${workspaceRoot}/harpg-toolkit/*"
           }
       }
     ]
