--- a/harpg-toolkit/package.json
+++ b/harpg-toolkit/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "cross-env": "^7.0.2",
+    "iconv-lite": "^0.6.2",
     "next": "^9.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
